--- a/libsmtp/configure.in
+++ b/libsmtp/configure.in
@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(libsmtp.h)
+AC_INIT(confdefs.h)
 
 dnl Checks for programs.
 AC_PROG_CC
@@ -18,4 +18,4 @@ AC_C_CONST
 dnl Checks for library functions.
 AC_CHECK_FUNCS(gethostname socket strstr)
 
-AC_OUTPUT(base64/Makefile Makefile)
+AC_OUTPUT(base64/Makefile src/Makefile Makefile)
