MIME Multipart running. All basic MIME functions except custom_type stuff added. Big fun.

--- a/libsmtp/configure.in
+++ b/libsmtp/configure.in
@@ -18,4 +18,4 @@ AC_C_CONST
 dnl Checks for library functions.
 AC_CHECK_FUNCS(gethostname socket strstr)
 
-AC_OUTPUT(base64/Makefile src/Makefile Makefile)
+AC_OUTPUT(mime/Makefile smtp/Makefile Makefile)
