--- a/libsmtp/smtp/Makefile.in
+++ b/libsmtp/smtp/Makefile.in
@@ -1,35 +1,31 @@
 
-all:	libsmtp.a testapp mimetest
+FLAGS=-DLIBSMTP_USE_MIME -g -I../include
 
-libsmtp.a:	libsmtp_connection.o libsmtp_error.o libsmtp_data.o libsmtp_comm.o libsmtp_mime.o
-	ar -r libsmtp.a libsmtp_connection.o libsmtp_error.o libsmtp_data.o libsmtp_comm.o libsmtp_mime.o
+all:	libsmtp.a testapp
 
-libsmtp.o:	libsmtp.c libsmtp.h
-	gcc `glib-config --cflags` -c -g -o libsmtp.o libsmtp.c
+libsmtp.a:	libsmtp_connection.o libsmtp_error.o libsmtp_data.o libsmtp_comm.o
+	ar -r libsmtp.a libsmtp_connection.o libsmtp_error.o libsmtp_data.o libsmtp_comm.o
 
-libsmtp_connection.o:	libsmtp_connection.c libsmtp.h
-	gcc `glib-config --cflags` -c -g -o libsmtp_connection.o libsmtp_connection.c
+libsmtp.o:	libsmtp.c
+	gcc `glib-config --cflags` $(FLAGS) -c -o libsmtp.o libsmtp.c
 
-libsmtp_comm.o:	libsmtp_comm.c libsmtp.h
-	gcc `glib-config --cflags` -c -g -o libsmtp_comm.o libsmtp_comm.c
+libsmtp_connection.o:	libsmtp_connection.c
+	gcc `glib-config --cflags` $(FLAGS) -c -o libsmtp_connection.o libsmtp_connection.c
 
-libsmtp_mime.o:	libsmtp_mime.c libsmtp_mime.h
-	gcc `glib-config --cflags` -DLIBSMTP_USE_MIME -c -g -o libsmtp_mime.o libsmtp_mime.c
+libsmtp_comm.o:	libsmtp_comm.c
+	gcc `glib-config --cflags` $(FLAGS) -c -o libsmtp_comm.o libsmtp_comm.c
 
-libsmtp_error.o:	libsmtp_error.c libsmtp.h
-	gcc `glib-config --cflags` -c -g -o libsmtp_error.o libsmtp_error.c
+libsmtp_error.o:	libsmtp_error.c
+	gcc `glib-config --cflags` $(FLAGS) -c -o libsmtp_error.o libsmtp_error.c
 
-libsmtp_data.o:	libsmtp_data.c libsmtp.h
-	gcc `glib-config --cflags` -c -g -o libsmtp_data.o libsmtp_data.c
+libsmtp_data.o:	libsmtp_data.c
+	gcc `glib-config --cflags` $(FLAGS) -c -o libsmtp_data.o libsmtp_data.c
 
-testapp.o:	testapp.c libsmtp.h
-	gcc -c -g -o testapp.o testapp.c `glib-config --cflags`
+testapp.o:	testapp.c
+	gcc $(FLAGS) -c -o testapp.o testapp.c `glib-config --cflags`
 
 testapp:	testapp.o libsmtp.a
-	gcc -o testapp -g -L. testapp.o -lsmtp `glib-config --libs` -lglib
-
-mimetest:	mimetest.c libsmtp.a
-	gcc mimetest.c -o mimetest -L. -lsmtp `glib-config --cflags` `glib-config --libs`
+	gcc $(FLAGS) -o testapp -L. testapp.o -lsmtp `glib-config --libs` -lglib
 
 clean:
 	rm testapp *.o *.a
