--- a/libsmtp/configure.in
+++ b/libsmtp/configure.in
@@ -15,7 +15,7 @@ EXTRA_VERSION=0
 
 AC_PROG_MAKE_SET
 
-subdirs="smtp include"
+subdirs="smtp"
 
 dnl Checks for programs.
 AC_PROG_CC
@@ -27,10 +27,12 @@ dnl Replace `main' with a function in -lglib:
 AC_CHECK_LIB(glib, main)
 
 AC_ARG_ENABLE(mime,
-	[  --disable-mime         disable libsmtp_mime and mime support [default=no]])
+	[  --enable-mime         enable libsmtp_mime and mime support [default=yes]],
+	[enable_mime=$enableval], [enable_mime=yes])
 
-if test "$disable_mime" == "yes"; then
+if test "$enable_mime" != "yes"; then
 	AC_DEFINE(WITHOUT_MIME)
+	with_mime=no
 else
 	AC_DEFINE(WITH_MIME)
 	subdirs="$subdirs mime"
@@ -67,4 +69,4 @@ AC_SUBST(subdirs)
 AC_SUBST(with_mime)
 AC_SUBST(addtl_flags)
 
-AC_OUTPUT(mime/Makefile smtp/Makefile examples/Makefile Makefile include/Makefile, echo timestamp > stamp-h)
+AC_OUTPUT(mime/Makefile smtp/Makefile examples/Makefile Makefile, echo timestamp > stamp-h)
